tests/lean/auto_quote_error2.lean.expected.out
auto_quote_error2.lean:5:2: error: invalid apply tactic, failed to unify
  a = c
with
  ?m_2 = ?m_2
state:
a b c : ℕ,
a_1 : a = b,
a_2 : b = c
⊢ a = c

a b c : ℕ,
a_1 : a = b,
a_2 : b = c
⊢ Sort ?
auto_quote_error2.lean:8:0: error: failed
state:
a b c : ℕ,
a_1 : a = b,
a_2 : b = c
⊢ a = c

a b c : ℕ,
a_1 : a = b,
a_2 : b = c
⊢ Sort ?
hello world
auto_quote_error2.lean:16:2: error: focus tactic failed, focused goal has not been solved
state:
a b c : ℕ,
a_1 : a = b,
a_2 : b = c
⊢ a = c
auto_quote_error2.lean:19:0: error: failed
state:
a b c : ℕ,
a_1 : a = b,
a_2 : b = c
⊢ a = c
hello world
auto_quote_error2.lean:28:2: error: focus tactic failed, focused goal has not been solved
state:
a b c : ℕ,
a_1 : a = b,
a_2 : b = c
⊢ a = ?m_1
auto_quote_error2.lean:30:0: error: failed
state:
a b c : ℕ,
a_1 : a = b,
a_2 : b = c
⊢ a = ?m_1
auto_quote_error2.lean:37:22: error: don't know how to synthesize placeholder
context:
a b c : ℕ,
h1 : a = b,
h2 : b = c
⊢ b = c
auto_quote_error2.lean:37:4: error: elaborator failed
state:
a b c : ℕ,
h1 : a = b,
h2 : b = c
⊢ a = c
auto_quote_error2.lean:38:2: error: failed
state:
a b c : ℕ,
h1 : a = b,
h2 : b = c
⊢ a = c
auto_quote_error2.lean:39:0: error: failed
state:
a b c : ℕ,
h1 : a = b,
h2 : b = c
⊢ a = c
